[package]
name = "sparse-merkle-tree"
version = "0.6.1"
authors = ["jjy <jjyruby@gmail.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/nervosnetwork/sparse-merkle-tree"
description = "Sparse merkle tree implement in rust"
include = [
  "/src",
  "/benches",
  "/build.rs",
  "/c/deps/ckb-c-stdlib",
  "/c/ckb_smt.h",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["std", "blake2b-ref", "blake2b-rs"]
ckb-contract = [
    "blake2b-ref",
]
std = []
# SMT implemented in C
smtc = []
# A storage optimized SMT implemented in trie (https://ouvrard-pierre-alain.medium.com/sparse-merkle-tree-86e6e2fc26da)
trie = []

[dev-dependencies]
proptest = "0.9"
criterion = "0.2"
rand = "0.8"
hex = "0.4.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0.65"

[[bench]]
name = "smt_benchmark"
harness = false

[[bench]]
name = "store_counter_benchmark"
harness = false

[build-dependencies]
cc = "1.0"

[target.'cfg(not(target_family = "wasm"))'.dependencies]
blake2b-rs = { version = "0.2", optional = true }

[target.'cfg(target_family = "wasm")'.dependencies]
blake2b-ref = { version = "0.3", optional = true }

[dependencies]
blake2b-ref = { version = "0.3", optional = true }
cfg-if = "1"
